   they all now belong to npg_pipeline::function namespace
 - consolidated functions formely defined in the pluggable
   namespace in npg_pipeline::function::collection module
 - removed methods representing functions, created mapping of
   functions to modules, methods and options (a registry)
   npg_pipeline::pluggable::registry
 - removed ::harold:: component from pipelines'namespace 
 - added npg_pipeline_ prefix to this package's script names if
   was not part of their name
 - removed unused module for fixing Illumina config files
 - removed unused module for LSF job creation for tag deplexing -
   this is now done within p4 stage 1
 - removed unused implementation for function copy_interop_files_to_irods
 - removed unused spatial_filter, fix_broken_files and force_phix_split flags
 - removed a number of unused methods in npg_pipeline::base

release 51.11.1
 - Handle dual indexes (create new format lane tag files)
 - remove remaining broken provisions for xml LIMs driver 
 - use the new log publisher
 - now allows XA/Y-split with no target alignment

release 51.11.0
 - added support for RNA analysis/quantification using STAR and salmon
 - STAR alignment jobs get more memory using bmod after seq_alignment jobs have been submitted.
 - removed unneeded coordinate sort and duplicate marking when there is no alignment to a target reference

release 51.10.3
 - no alignments for chromium libraries
 - seq_alignment to do_rna analysis regardless of the organism specified (other conditions stay in place)

release 51.10.2
 - use bwa aln for human split with tophat target alignment

release 51.10.1
 - Modified qc run function list, removed copy_interop and switched archive_to_irods to samplesheet
 
release 51.10
 - Chained execution of RNA-SeQC to the vtfp/viv alignment cmd for RNA-Seq libraries only:
     entries for qc check rna_seqc removed from central function and parallelisation.
     code that created rna_seqc-specific directories has been removed as this is